# decifrador

./: .gitignore  GITHUB_UPLOAD.md  LICENSE  README.md  aes_decrypt.py  decrypted_text.txt  diffie_hellman_20250808_191705.txt  install.bat  pyproject.toml  requirements.txt  run.bat  setup.py  upload_to_github.bat
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-app.yml
docs/: index.md
